# barrett-wam-arm

./: .gitignore  README.md
barrett_model/: CMakeLists.txt  package.xml
barrett_model/models/: components.urdf.xacro
barrett_model/robots/: wam7.urdf.xacro  wam7_bhand.urdf.xacro  wam_7dof_wam_bhand.urdf  wam_7dof_wam_bhand.urdf.xacro
barrett_moveit/barrett_wam_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
barrett_moveit/barrett_wam_moveit_config/config/: arm.srdf.xacro  ball.srdf.xacro  fake_controllers.yaml  hand.srdf.xacro  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  wam.srdf  wam7.srdf.xacro  wam7_hand.srdf  wam_top.srdf.xacro
barrett_moveit/barrett_wam_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  wam_moveit_controller_manager.launch.xml  warehouse.launch
barrett_moveit/barrett_wam_moveit_config/python/: CMakeLists.txt
barrett_moveit/barrett_wam_moveit_config/python/launch/: barrett_wam_moveit.launch
barrett_moveit/barrett_wam_moveit_config/python/rviz/: barrett_wam_moveit.rviz
barrett_moveit/barrett_wam_moveit_config/python/scripts/: barrett_wam_moveit_node (another copy).py  barrett_wam_moveit_node (copy).py  barrett_wam_moveit_node.py
barrett_moveit/barrett_wam_moveit_config/python/urdf/: wam.urdf  wam7_bhand.urdf
barrett_tf_publisher/: CMakeLists.txt  README.md  package.xml
barrett_tf_publisher/launch/: barrett_tf_publisher.launch  barrett_tf_publisher_sim.launch
barrett_tf_publisher/rviz/: barrett_tf_publisher.rviz  barrett_tf_publisher_sim.rviz
barrett_tf_publisher/samples/: sim_demo.mkv
barrett_tf_publisher/scripts/: barrett_tf_publisher.py
barrett_tf_publisher/urdf/: wam.urdf  wam_sim.urdf
barrett_trac_ik/: CMakeLists.txt  README.md  package.xml
barrett_trac_ik/launch/: aruco_demo.launch  barrett_trac_ik_arl_affpose_autonomous.launch  barrett_trac_ik_arl_affpose_simple.launch  barrett_trac_ik_demo.launch
barrett_trac_ik/scripts/: aruco_demo.py  aurco_demo.py  barrett_trac_ik_arl_affpose_autonomous.py  barrett_trac_ik_arl_affpose_simple.py  barrett_trac_ik_demo.py  finite_state_manager.py
barrett_trac_ik/urdf/: wam.urdf  wam7_bhand.urdf
barrett_wam_arm_bringup/: CMakeLists.txt  package.xml
barrett_wam_arm_bringup/launch/: barrett_wam_arm_bringup.launch
barrett_wam_arm_bringup/rviz/: barrett_wam_arm_bringup.rviz
barrett_wam_arm_control/: CMakeLists.txt  package.xml
barrett_wam_arm_control/config/: joint_names.yaml  ros_controllers.yaml
barrett_wam_arm_control/launch/: barrett_wam_arm_control.launch
barrett_wam_arm_control/launch/moveit/: move_group.launch  trajectory_execution.launch.xml
barrett_wam_arm_controllers/barrett_wam_arm_cartesian_controller/: CMakeLists.txt  barrett_wam_arm_cartesian_controller_plugins.xml  package.xml
barrett_wam_arm_controllers/barrett_wam_arm_cartesian_controller/include/barrett_wam_arm_cartesian_controller/: cartesian_controller.h
barrett_wam_arm_controllers/barrett_wam_arm_cartesian_controller/src/: cartesian_controller.cpp
barrett_wam_arm_controllers/barrett_wam_arm_controllers/: CMakeLists.txt  package.xml
barrett_wam_arm_hw/: CMakeLists.txt  package.xml
barrett_wam_arm_hw/include/barrett_wam_arm_hw/: arm_control_loop.h  arm_hw.h  arm_hw_real.h  arm_hw_sim.h  can_config.h  gazebo_arm_control_plugin.h  joint_group_voltage_controller.h  joint_voltage_controller.h  real_arm_control.h
barrett_wam_arm_hw/src/: arm_control_loop.cpp  arm_hw.cpp  arm_hw_real.cpp  arm_hw_real_node.cpp  arm_hw_sim.cpp  gazebo_arm_control_plugin.cpp  gripper_voltage_controller.cpp  joint_group_voltage_controller.cpp  joint_voltage_controller.cpp  real_arm_control.cpp
barrett_wam_arm_msgs/: CMakeLists.txt  package.xml
barrett_wam_arm_sim/: CMakeLists.txt  package.xml
barrett_wam_arm_sim/launch/: empty_world.launch
barrett_wam_arm_sim/launch/include/: barrett_wam_arm.launch
joystick/: CMakeLists.txt  package.xml
joystick/include/joystick/: Controller.h
joystick/src/: Controller.cpp
