<package>
  <name>barrett_wam_arm_bringup</name>
  <version>0.0.1</version>

  <description>This package contains a number of URDF tutorials.</description>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/barrett_wam_arm_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
