<?xml version="1.0"?>
<package format="2">
  <name>barrett_wam_arm_control</name>
  <version>0.0.0</version>
  <description>Contains ros_control configurations and launch settings for arm</description>

  <maintainer email="akeaveny@uwaterloo.ca">Aidan Keaveny</maintainer>
  <license>MIT</license>
  <author email="akeaveny@uwaterloo.ca">Aidan Keaveny</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>barrett_wam_arm_cartesian_controller</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_ros_control_interface</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>barrett_wam_arm_hw</exec_depend>
  <exec_depend>barrett_wam_arm_cartesian_controller</exec_depend>

  <depend>control_msgs</depend>
  <depend>barrett_model</depend>
  <depend>barrett_wam_arm_msgs</depend>

  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
